--- a/k8s/dev/db/deployment.yaml
+++ b/k8s/dev/db/deployment.yaml
@@ -21,16 +21,16 @@ spec:
           ports:
             - containerPort: 5432
           env:
-            - name: DB_USERNAME
+            - name: POSTGRES_USER
               value: postgres
-            - name: DB_PASSWORD
+            - name: POSTGRES_PASSWORD
               value: postgres
-            - name: DB_NAME
+            - name: POSTGRES_DB
               value: todo
           volumeMounts:
             - name: postgres-data
               mountPath: /var/lib/postgresql/data
       volumes:
         - name: postgres-data
-          persistentVolumeClaim:
-            claimName: postgres-pvc
+#          persistentVolumeClaim:
+#            claimName: postgres-pvc
