--- a/k8s/dev/user-service/deployment.yaml
+++ b/k8s/dev/user-service/deployment.yaml
@@ -27,3 +27,7 @@ spec:
               value: postgres
             - name: DB_NAME
               value: todo
+            - name: DB_HOST
+              value: postgres-service
+            - name: DB_PORT
+              value: "5432"
