--- a/k8s/dev/ingress-service-template.yaml
+++ b/k8s/dev/ingress-service-template.yaml
@@ -1,14 +1,20 @@
 apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
-  name: proxy-ingress
-  annotations:
-    nginx.ingress.kubernetes.io/rewrite-target: /
+  name: proxy-${NAMESPACE}-ingress
 spec:
   rules:
-    - host: todo.local
+    - host: ${NAMESPACE}.to-do.works
       http:
         paths:
+          - path: /
+            pathType: Prefix
+            backend:
+              service:
+                name: frontend-service
+                port:
+                  number: 80
+
           - path: /users/
             pathType: Prefix
             backend:
@@ -16,6 +22,7 @@ spec:
                 name: user-service
                 port:
                   number: 80
+
           - path: /tasks
             pathType: Prefix
             backend:
@@ -23,4 +30,3 @@ spec:
                 name: taskview-service
                 port:
                   number: 80
-
