feat: fixing workflow_1

--- a/.github/workflows/workflow_1.yml
+++ b/.github/workflows/workflow_1.yml
@@ -40,6 +40,7 @@ jobs:
 
       - name: Install dependencies
         run: |
+            cd frontend
             npm install
             npm install -g commitlint @commitlint/config-conventional
 
