--- a/.github/workflows/workflow_1.yml
+++ b/.github/workflows/workflow_1.yml
@@ -50,11 +50,8 @@ jobs:
             COMMIT_MSG=$(git log -1 --pretty=%B)
             echo "COMMIT_MSG=$COMMIT_MSG" >> $GITHUB_ENV
 
-      - name: Generate version
-        run: |
-          git config --global user.email "you@example.com"
-          git config --global user.name "GitHub Actions"
-          npx standard-version --skip.tag
+      - name: Checkout Infrastructure Repository
+        uses: actions/checkout@v4
 
       - name: Read current version from version.txt
         id: read_version
@@ -79,16 +76,7 @@ jobs:
 
           NEW_VERSION="$MAJOR.$MINOR.$PATCH"
           echo "$NEW_VERSION" > version.txt
-          echo "NEW_VERSION=$NEW_VERSION" >> $GITHUB_ENV    
-
-      # Step 3: Commit and push updated version.txt (optional)
-      - name: Commit and push version.txt
-        run: |
-          git add version.txt
-          git commit -m "chore: bump version to $NEW_VERSION [skip ci]"
-          git push origin main
-        env:
-          NEW_VERSION: ${{ env.NEW_VERSION }}
+          echo "NEW_VERSION=$NEW_VERSION" >> $GITHUB_ENV  
 
       - name: Configure AWS Credentials
         uses: aws-actions/configure-aws-credentials@v1
