fix: fixing docker build arch errors in workflow.yml

--- a/.github/workflows/workflow_1.yml
+++ b/.github/workflows/workflow_1.yml
@@ -30,7 +30,7 @@ jobs:
       #Build docker image for frontend
       - name: build docker image for frontend
         run: |
-          docker compose build --platform linux/arm64 -t --no-cache todolist-app/frontend     
+          docker compose build -t --no-cache todolist-app/frontend     
 
 
       - name: Set up Node.js
