--- a/.github/workflows/workflow_1.yml
+++ b/.github/workflows/workflow_1.yml
@@ -30,7 +30,7 @@ jobs:
       #Build docker image for frontend
       - name: build docker image for frontend
         run: |
-           docker buildx build --platform linux/arm64 --no-cache -t frontend .
+           docker buildx build --platform linux/arm64 --no-cache -t frontend -f frontend .
       #    docker compose build -t --no-cache todolist-app/frontend
 
 
