--- a/.github/workflows/workflow_1.yml
+++ b/.github/workflows/workflow_1.yml
@@ -1,5 +1,5 @@
 # This is a basic workflow to help you get started with Actions
-name: Push docker image
+name: New deployment
 on:
   push:
     paths:
