adjusted workflow_4 to run manually

--- a/.github/workflows/workflow_4.yml
+++ b/.github/workflows/workflow_4.yml
@@ -1,9 +1,9 @@
 name: Blue-green deployment on prod
 on:
   workflow_run:
-    workflows: [ "Blue-green deployment on uat" ]
-    types:
-      - completed
+#    workflows: [ "Blue-green deployment on uat" ]
+#    types:
+#      - completed
   workflow_dispatch:
 
 jobs:
