adjusted workflow_4 to run manually

--- a/.github/workflows/workflow_4.yml
+++ b/.github/workflows/workflow_4.yml
@@ -1,10 +1,11 @@
 name: Blue-green deployment on prod
 on:
-  workflow_run:
+  workflow_dispatch:
+#  workflow_run:
 #    workflows: [ "Blue-green deployment on uat" ]
 #    types:
 #      - completed
-  workflow_dispatch:
+
 
 jobs:
   build:
