--- a/k8s/prod/prod_ingress.yaml
+++ b/k8s/prod/prod_ingress.yaml
@@ -12,7 +12,7 @@ spec:
             pathType: Prefix
             backend:
               service:
-                name: frontend-service
+                name: frontend-${VERSION_COLOUR}-service
                 port:
                   number: 80
 
