--- a/k8s/prod/deployment.yaml
+++ b/k8s/prod/deployment.yaml
@@ -1,122 +1,11 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: db-deployment
-#  namespace: qa
-  labels:
-    app: postgres            #pods will be named app: user-service
-spec:
-  replicas: 1
-  selector:
-    matchLabels:
-      app: postgres
-  template:
-    metadata:
-      labels:
-        app: postgres
-    spec:
-      containers:                     #specifies the container image the pods will run
-        - name: postgres
-          image: postgres:16
-          imagePullPolicy: Always
-          ports:
-            - containerPort: 5432
-          env:
-            - name: POSTGRES_USER
-              value: postgres
-            - name: POSTGRES_PASSWORD
-              value: postgres
-            - name: POSTGRES_DB
-              value: todo
-          volumeMounts:
-            - name: postgres-data
-              mountPath: /var/lib/postgresql/data
-      volumes:
-        - name: postgres-data
-#          persistentVolumeClaim:
-#            claimName: postgres-pvc
-
----
-apiVersion: v1
-kind: Service
-metadata:
-  name: postgres-service
-#  namespace: qa
-  labels:
-    app: postgres
-spec:
-  type: ClusterIP
-  selector:
-    app: postgres # Select pods with label app=mongodb
-  ports:
-    - protocol: TCP
-      port: 5432 # Service Port
-      targetPort: 5432 # Pods Port
-
----
-
-apiVersion: apps/v1
-kind: Deployment
-metadata:
-  name: frontend-deployment
-#  namespace: qa
-  labels:
-    app: frontend            #pods will be named app: user-service
-spec:
-  replicas: 1
-  selector:
-    matchLabels:
-      app: frontend
-  template:
-    metadata:
-      labels:
-        app: frontend
-        version: "${FRONTEND_VERSION}"
-    spec:
-      nodeSelector:
-        arch: arm64
-    spec:
-      containers:                     #specifies the container image the pods will run
-        - name: frontend
-          image: 822298509516.dkr.ecr.us-east-1.amazonaws.com/blue_green_ecr/frontend:${FRONTEND_VERSION}
-          imagePullPolicy: Always
-          ports:
-            - containerPort: 3000
-          #env:
-          #  - name: REACT_APP_USER_SERVICE_URL
-          #    value: http://user-service:8081
-          #  - name: REACT_APP_TASK_SERVICE_URL
-          #    value: http://taskview-service:8082
-
-
----
-
-apiVersion: v1
-kind: Service
-metadata:
-  name: frontend-service
-#  namespace: qa
-spec:
-  type: ClusterIP
-  selector:
-    app: frontend
-    version: "${FRONTEND_VERSION}"
-  ports:
-    - protocol: TCP
-      port: 80
-      targetPort: 3000
-
----
-
-apiVersion: apps/v1
-kind: Deployment
-metadata:
   name: taskview-service-deployment
-#  namespace: qa
   labels:
     app: taskview-service            #pods will be named app: user-service
 spec:
-  replicas: 1
+  replicas: 2
   selector:
     matchLabels:
       app: taskview-service
@@ -130,18 +19,38 @@ spec:
     spec:
       containers:                     #specifies the container image the pods will run
         - name: taskview-service
-          image: 822298509516.dkr.ecr.us-east-1.amazonaws.com/blue_green_ecr/taskview_service:latest
+          image: 822298509516.dkr.ecr.us-east-1.amazonaws.com/blue_green_ecr/taskview_service:${CURRENT_VERSION}
           imagePullPolicy: Always
           ports:
             - containerPort: 8082
           env:
             - name: SPRING_DATASOURCE_URL
-              value: jdbc:postgresql://postgres-service:5432/todo
+              value: jdbc:postgresql://app-postgres-db.corvmoudbvkz.us-east-1.rds.amazonaws.com:5432/mydb
+            - name: POSTGRES_HOST
+              valueFrom:
+                secretKeyRef:
+                  name: rds-postgres-secret
+                  key: POSTGRES_HOST
+            - name: POSTGRES_PORT
+              valueFrom:
+                secretKeyRef:
+                  name: rds-postgres-secret
+                  key: POSTGRES_PORT
+            - name: POSTGRES_DB
+              valueFrom:
+                secretKeyRef:
+                  name: rds-postgres-secret
+                  key: POSTGRES_DB
             - name: SPRING_DATASOURCE_USERNAME
-              value: postgres
+              valueFrom:
+                secretKeyRef:
+                  name: rds-postgres-secret
+                  key: POSTGRES_USER
             - name: SPRING_DATASOURCE_PASSWORD
-              value: postgres
-
+              valueFrom:
+                secretKeyRef:
+                  name: rds-postgres-secret
+                  key: POSTGRES_PASSWORD
 
 ---
 
@@ -149,13 +58,15 @@ apiVersion: v1
 kind: Service
 metadata:
   name: taskview-service
-#  namespace: qa
+  labels:
+    app: taskview-service
 spec:
   type: ClusterIP
   selector:
     app: taskview-service
   ports:
-    - protocol: TCP
+    - name: http
+      protocol: TCP
       port: 80
       targetPort: 8082
 
@@ -165,11 +76,10 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: user-service-deployment
-#  namespace: qa
   labels:
     app: user-service            #pods will be named app: user-service
 spec:
-  replicas: 1
+  replicas: 2
   selector:
     matchLabels:
       app: user-service
@@ -183,18 +93,38 @@ spec:
     spec:
       containers:                     #specifies the container image the pods will run
         - name: user-service
-          image: 822298509516.dkr.ecr.us-east-1.amazonaws.com/blue_green_ecr/user_service:latest #pulls image from repo
+          image: 822298509516.dkr.ecr.us-east-1.amazonaws.com/blue_green_ecr/user_service:${CURRENT_VERSION} #pulls image from repo
           imagePullPolicy: Always
           ports:
             - containerPort: 8081
           env:
             - name: SPRING_DATASOURCE_URL
-              value: jdbc:postgresql://postgres-service:5432/todo
+              value: jdbc:postgresql://app-postgres-db.corvmoudbvkz.us-east-1.rds.amazonaws.com:5432/mydb
+            - name: POSTGRES_HOST
+              valueFrom:
+                secretKeyRef:
+                  name: rds-postgres-secret
+                  key: POSTGRES_HOST
+            - name: POSTGRES_PORT
+              valueFrom:
+                secretKeyRef:
+                  name: rds-postgres-secret
+                  key: POSTGRES_PORT
+            - name: POSTGRES_DB
+              valueFrom:
+                secretKeyRef:
+                  name: rds-postgres-secret
+                  key: POSTGRES_DB
             - name: SPRING_DATASOURCE_USERNAME
-              value: postgres
+              valueFrom:
+                secretKeyRef:
+                  name: rds-postgres-secret
+                  key: POSTGRES_USER
             - name: SPRING_DATASOURCE_PASSWORD
-              value: postgres
-
+              valueFrom:
+                secretKeyRef:
+                  name: rds-postgres-secret
+                  key: POSTGRES_PASSWORD
 
 
 ---
@@ -203,13 +133,15 @@ apiVersion: v1
 kind: Service
 metadata:
   name: user-service
-#  namespace: qa
+  labels:
+    app: user-service
 spec:
   type: ClusterIP
   selector:
     app: user-service
   ports:
-    - protocol: TCP
+    - name: http
+      protocol: TCP
       port: 80
       targetPort: 8081
 
