--- a/k8s/uat/deployment.yaml
+++ b/k8s/uat/deployment.yaml
@@ -2,7 +2,6 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: db-deployment
-#  namespace: qa
   labels:
     app: postgres            #pods will be named app: user-service
 spec:
@@ -41,7 +40,6 @@ apiVersion: v1
 kind: Service
 metadata:
   name: postgres-service
-#  namespace: qa
   labels:
     app: postgres
 spec:
@@ -59,7 +57,6 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: frontend-deployment
-#  namespace: qa
   labels:
     app: frontend            #pods will be named app: user-service
 spec:
@@ -82,11 +79,6 @@ spec:
           imagePullPolicy: Always
           ports:
             - containerPort: 3000
-          #env:
-          #  - name: REACT_APP_USER_SERVICE_URL
-          #    value: http://user-service:8081
-          #  - name: REACT_APP_TASK_SERVICE_URL
-          #    value: http://taskview-service:8082
 
 
 ---
@@ -95,7 +87,8 @@ apiVersion: v1
 kind: Service
 metadata:
   name: frontend-service
-#  namespace: qa
+  labels:
+    app: frontend
 spec:
   type: ClusterIP
   selector:
@@ -112,7 +105,6 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: taskview-service-deployment
-#  namespace: qa
   labels:
     app: taskview-service            #pods will be named app: user-service
 spec:
@@ -130,7 +122,7 @@ spec:
     spec:
       containers:                     #specifies the container image the pods will run
         - name: taskview-service
-          image: 822298509516.dkr.ecr.us-east-1.amazonaws.com/blue_green_ecr/taskview_service:latest
+          image: 822298509516.dkr.ecr.us-east-1.amazonaws.com/blue_green_ecr/taskview_service:${TASK_VERSION}
           imagePullPolicy: Always
           ports:
             - containerPort: 8082
@@ -149,13 +141,15 @@ apiVersion: v1
 kind: Service
 metadata:
   name: taskview-service
-#  namespace: qa
+  labels:
+    app: taskview-service
 spec:
   type: ClusterIP
   selector:
     app: taskview-service
   ports:
-    - protocol: TCP
+    - name: http
+      protocol: TCP
       port: 80
       targetPort: 8082
 
@@ -165,7 +159,6 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: user-service-deployment
-#  namespace: qa
   labels:
     app: user-service            #pods will be named app: user-service
 spec:
@@ -183,7 +176,7 @@ spec:
     spec:
       containers:                     #specifies the container image the pods will run
         - name: user-service
-          image: 822298509516.dkr.ecr.us-east-1.amazonaws.com/blue_green_ecr/user_service:latest #pulls image from repo
+          image: 822298509516.dkr.ecr.us-east-1.amazonaws.com/blue_green_ecr/user_service:${USER_VERSION} #pulls image from repo
           imagePullPolicy: Always
           ports:
             - containerPort: 8081
@@ -203,13 +196,15 @@ apiVersion: v1
 kind: Service
 metadata:
   name: user-service
-#  namespace: qa
+  labels:
+    app: user-service
 spec:
   type: ClusterIP
   selector:
     app: user-service
   ports:
-    - protocol: TCP
+    - name: http
+      protocol: TCP
       port: 80
       targetPort: 8081
 
