--- a/.github/workflows/workflow_1.yml
+++ b/.github/workflows/workflow_1.yml
@@ -31,19 +31,24 @@ jobs:
             COMMITS=$(git log --since="${{ env.since_time }}" --pretty=format:"%s")
             ESCAPED_COMMITS=$(echo "$COMMITS" | jq -sRr @uri)
             echo "commit_messages=$ESCAPED_COMMITS" >> $GITHUB_OUTPUT
+            DECODED_COMMITS=$(echo "${{ steps.commits.outputs.commit_messages }}" | sed 's/%3A/:/g; s/%20/ /g; s/%0A/\n/g')
+            echo "Decoded commit messages:"
+            echo "$DECODED_COMMITS"
+            echo "decoded_commit_messages=$DECODED_COMMITS" >> $GITHUB_ENV
+
 
       - name: Determine highest level change
         id: level
         run: |
           LEVEL="patch"
           echo "Commit messages from last 24 hours:"
-          echo "${{ steps.commits.outputs.commit_messages }}"
+          echo "${{ steps.commits.outputs.decoded_commit_messages }}"
           
           # Check for BREAKING CHANGE (major bump)
-          if echo "${{ env.commit_messages }}" | grep -qi "BREAKING CHANGE"; then
+          if echo "${{ env.decoded_commit_messages }}" | grep -qi "BREAKING CHANGE"; then
             LEVEL="major"
           
-          elif echo "${{ env.commit_messages }}" | grep -qiE "^feat"; then
+          elif echo "${{ env.decoded_commit_messages }}" | grep -qiE "^feat"; then
             LEVEL="minor"
           fi
           
