fix nightly build

--- a/.github/workflows/workflow_1.yml
+++ b/.github/workflows/workflow_1.yml
@@ -31,7 +31,7 @@ jobs:
             COMMITS=$(git log --since="${{ env.since_time }}" --pretty=format:"%s")
             ESCAPED_COMMITS=$(echo "$COMMITS" | jq -sRr @uri)
             echo "commit_messages=$ESCAPED_COMMITS" >> $GITHUB_OUTPUT
-            DECODED_COMMITS=$(echo "${{ steps.commits.outputs.commit_messages }}" | sed 's/%3A/:/g; s/%20/ /g; s/%0A/\n/g')
+            DECODED_COMMITS=$(echo "${{ steps.commits.outputs.commit_messages }}" | jq -sRr @uri | jq -sRr @uri)
             echo "Decoded commit messages:"
             echo "$DECODED_COMMITS"
             echo "decoded_commit_messages=$DECODED_COMMITS" >> $GITHUB_ENV
