--- a/.github/workflows/workflow_1.yml
+++ b/.github/workflows/workflow_1.yml
@@ -53,13 +53,13 @@ jobs:
         run: |
           LEVEL="patch"
           echo "Commit messages from last 24 hours:"
-          echo "${{ steps.commits.outputs.decoded_commit_messages }}"
+          echo "${{ steps.decode.outputs.decoded_commit_messages }}"
           
           # Check for BREAKING CHANGE (major bump)
-          if echo "${{ env.decoded_commit_messages }}" | grep -qi "BREAKING CHANGE"; then
+          if echo "${{ steps.decode.outputs.decoded_commit_messages }}" | grep -qi "BREAKING CHANGE"; then
             LEVEL="major"
           
-          elif echo "${{ env.decoded_commit_messages }}" | grep -qiE "^feat"; then
+          elif echo "${{ steps.decode.outputs.decoded_commit_messages }}" | grep -qiE "^feat"; then
             LEVEL="minor"
           fi
           
