fix nightly build

--- a/.github/workflows/workflow_1.yml
+++ b/.github/workflows/workflow_1.yml
@@ -142,3 +142,4 @@ jobs:
           NEW_VERSIONS_JSON+="}"
 
           echo "new_versions=$NEW_VERSIONS_JSON" >> $GITHUB_OUTPUT
+          echo $NEW_VERSIONS_JSON
