--- a/.github/workflows/workflow_1.yml
+++ b/.github/workflows/workflow_1.yml
@@ -143,3 +143,32 @@ jobs:
 
           echo "new_versions=$NEW_VERSIONS_JSON" >> $GITHUB_OUTPUT
           echo $NEW_VERSIONS_JSON
+
+      - name: Configure AWS Credentials
+        uses: aws-actions/configure-aws-credentials@v1
+        with:
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          aws-region: ${{ secrets.AWS_DEFAULT_REGION }}
+          aws-session-token: ${{ secrets.AWS_SESSION_TOKEN }}
+
+      - name: Set up Docker
+        uses: docker/setup-buildx-action@v2
+
+      - name: Build and Tag docker images
+        run: |
+          SERVICES="${{steps.detect_services.outputs.services_to_bump}}"
+          for SERVICE in "${SERVICES[@]}"; do
+            NEW_VERSION=$(jq -r --arg svc "$SERVICE" '.[$svc]' new_versions.json)
+            
+            echo "Building Docker image for $SERVICE"
+            cd $SERVICE
+            docker buildx build --platform linux/arm64 -t todolist-app/$SERVICE . --load
+            docker tag todolist-app/$SERVICE:latest 822298509516.dkr.ecr.us-east-1.amazonaws.com/blue_green_ecr/$SERVICE:$NEW_VERSION
+            
+            echo "Pushing $SERVICE:$NEW_VERSION to Docker registry"
+            docker push "822298509516.dkr.ecr.us-east-1.amazonaws.com/blue_green_ecr/$SERVICE:$NEW_VERSION"
+          done
+            
+            
+            
