--- a/.github/workflows/workflow_1.yml
+++ b/.github/workflows/workflow_1.yml
@@ -141,13 +141,13 @@ jobs:
 
           NEW_VERSIONS_JSON+="}"
 
-          echo "new_versions=$NEW_VERSIONS_JSON" >> $GITHUB_OUTPUT
+          echo "NEW_VERSIONS_JSON=$NEW_VERSIONS_JSON" >> $GITHUB_ENV
           echo "NEW_VERSIONS_JSON: $NEW_VERSIONS_JSON"
 
       - name: Check for version changes
         id: check_version_changes
         run: |
-          NEW_VERSIONS_JSON="${{ steps.bump_versions.outputs.new_versions }}"
+          NEW_VERSIONS_JSON="${{ env.NEW_VERSIONS_JSON }}"
           echo "NEW_VERSIONS_JSON: $NEW_VERSIONS_JSON"  # Debugging the output
           
           echo "changes_services:"
